chore: use node-alpine image
reduce image size by using alpine node image and use puppeteer-core
and fix error handler function error

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "puppeteer-core": "^13.5.2"
+  },
+  "devDependencies": {
     "puppeteer": "^13.5.2"
   }
 }
